--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ docs = [
     "myst-parser>=2.0.0",
     "sphinx-copybutton>=0.5.0",
     "sphinxcontrib-mermaid>=0.8.0",
+    "sphinx-autobuild>=2024.10.3"
 ]
 
 [tool.setuptools]
