--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-numpy>=1.24.4
-scikit-learn>=1.3.2
-quantile-forest>=1.2.4
-tqdm>=4.66.1
-pandas>=2.0.3
+numpy>=1.20.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+pandas>=1.3.0
+tqdm>=4.60.0
+pydantic>=2.0.0
+joblib>=1.0.0
+statsmodels>=0.13.0
